[gd_scene load_steps=2 format=3 uid="uid://bxvn4l2k8hjy5"]

[ext_resource type="Script" uid="uid://0eubnc647nbc" path="res://scenes/physics/rigid_bodies/rigid_bodies_demo.gd" id="1_0j2q4"]

[node name="Main" type="Node2D"]
script = ExtResource("1_0j2q4")

[node name="UI" type="CanvasLayer" parent="."]

[node name="PhysicsPanel" type="Panel" parent="UI"]
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -300.0
offset_right = -20.0
offset_bottom = 200.0

[node name="VBoxContainer" type="VBoxContainer" parent="UI/PhysicsPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 10.0
offset_top = 10.0
offset_right = -10.0
offset_bottom = -10.0
grow_horizontal = 2
grow_vertical = 2

[node name="PhysicsInfo" type="Label" parent="UI/PhysicsPanel/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
text = "Physics: Gravity enabled"

[node name="BodiesInfo" type="Label" parent="UI/PhysicsPanel/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.8, 0.8, 1, 1)
text = "Bodies: 0"

[node name="ForcesInfo" type="Label" parent="UI/PhysicsPanel/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.8, 0.8, 1)
text = "Forces: None"

[node name="ControlPanel" type="Panel" parent="UI"]
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = -250.0
offset_right = 350.0
offset_bottom = -20.0

[node name="VBoxContainer" type="VBoxContainer" parent="UI/ControlPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 10.0
offset_top = 10.0
offset_right = -10.0
offset_bottom = -10.0
grow_horizontal = 2
grow_vertical = 2

[node name="GravityContainer" type="HBoxContainer" parent="UI/ControlPanel/VBoxContainer"]
layout_mode = 2

[node name="GravityLabel" type="Label" parent="UI/ControlPanel/VBoxContainer/GravityContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_colors/font_color = Color(1, 1, 1, 1)
text = "Gravity: 500"

[node name="GravitySlider" type="HSlider" parent="UI/ControlPanel/VBoxContainer/GravityContainer"]
layout_mode = 2
size_flags_horizontal = 3
max_value = 1500.0
step = 50.0
value = 500.0

[node name="MassContainer" type="HBoxContainer" parent="UI/ControlPanel/VBoxContainer"]
layout_mode = 2

[node name="MassLabel" type="Label" parent="UI/ControlPanel/VBoxContainer/MassContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_colors/font_color = Color(1, 1, 1, 1)
text = "Mass: 5.0"

[node name="MassSlider" type="HSlider" parent="UI/ControlPanel/VBoxContainer/MassContainer"]
layout_mode = 2
size_flags_horizontal = 3
min_value = 0.5
max_value = 20.0
step = 0.5
value = 5.0

[node name="DampingContainer" type="HBoxContainer" parent="UI/ControlPanel/VBoxContainer"]
layout_mode = 2

[node name="DampingLabel" type="Label" parent="UI/ControlPanel/VBoxContainer/DampingContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_colors/font_color = Color(1, 1, 1, 1)
text = "Damping: 0.5"

[node name="DampingSlider" type="HSlider" parent="UI/ControlPanel/VBoxContainer/DampingContainer"]
layout_mode = 2
size_flags_horizontal = 3
max_value = 5.0
step = 0.1
value = 0.5

[node name="ButtonContainer" type="HBoxContainer" parent="UI/ControlPanel/VBoxContainer"]
layout_mode = 2

[node name="ResetButton" type="Button" parent="UI/ControlPanel/VBoxContainer"]
layout_mode = 2
text = "Reset"

[node name="SpawnButton" type="Button" parent="UI/ControlPanel/VBoxContainer"]
layout_mode = 2
text = "Spawn Body"

[node name="ClearButton" type="Button" parent="UI/ControlPanel/VBoxContainer"]
layout_mode = 2
text = "Clear All"
